Corrected image path

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         <div id="choices">
             <button class="choice js-rock-button" id="rock">
                 <div class="choice-circle">
-                    <img src="images/rock-emoji.png" alt="Rock" class="choice-image">
+                    <img src="Images/rock-emoji.png" alt="Rock" class="choice-image">
                 </div>
                 <div class="choice-name">Rock</div>
             </button>
             
             <button class="choice js-paper-button" id="paper">
                 <div class="choice-circle">
-                    <img src="images/paper-emoji.png" alt="Paper" class="choice-image">
+                    <img src="Images/paper-emoji.png" alt="Paper" class="choice-image">
                 </div>
                 <div class="choice-name">Paper</div>
             </button>
             
             <button class="choice js-scissor-button" id="scissors">
                 <div class="choice-circle">
-                    <img src="images/scissors-emoji.png" alt="Scissors" class="choice-image">
+                    <img src="Images/scissors-emoji.png" alt="Scissors" class="choice-image">
                 </div>
                 <div class="choice-name">Scissors</div>
             </button>
